# ChangeLog for dev-vcs/stgit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/stgit/ChangeLog,v 1.5 2011/03/27 23:23:25 arfrever Exp $

  27 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  stgit-0.14.3.ebuild, stgit-0.15.ebuild, stgit-0.15-r1.ebuild:
  Use Python 2 (bug #329491).

  27 Mar 2011; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Add myself as last-resort proxy/backup.

  27 Mar 2011; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
  update metadata.xml

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org> stgit-0.14.3.ebuild,
  stgit-0.15.ebuild, stgit-0.15-r1.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

  06 Mar 2010; Ulrich Mueller <ulm@gentoo.org> +stgit-0.14.3.ebuild,
  +stgit-0.15.ebuild, +stgit-0.15-r1.ebuild, +metadata.xml:
  Move package from dev-util to dev-vcs, bug 56967.

*stgit-0.15-r1 (14 Jan 2010)

  14 Jan 2010; Carsten Lohrke <carlo@gentoo.org> +stgit-0.15-r1.ebuild:
  Add missing files for a complete run of the test-suite.

*stgit-0.15 (11 Nov 2009)

  11 Nov 2009; Markos Chandras <hwoarang@gentoo.org> +stgit-0.15.ebuild:
  Version bump. Fixes bug 292615. Thanks to René 'Necoro' Neumann
  <gentoo@necoro.eu> for the ebuilds and recommendations

  21 Aug 2009; Jeremy Olexa <darkside@gentoo.org> -stgit-0.10.ebuild,
  -stgit-0.14.1.ebuild:
  remove old

  01 Jun 2009; nixnut <nixnut@gentoo.org> stgit-0.14.3.ebuild:
  ppc stable #268759

  31 May 2009; Brent Baude <ranger@gentoo.org> stgit-0.14.3.ebuild:
  Marking stgit-0.14.3 ppc64 for bug 268759

  13 May 2009; Tobias Klausmann <klausman@gentoo.org> stgit-0.14.3.ebuild:
  Stable on alpha, bug #268759

  13 May 2009; Markus Meier <maekke@gentoo.org> stgit-0.14.3.ebuild:
  amd64/x86 stable, bug #268759

  09 May 2009; Robin H. Johnson <robbat2@gentoo.org> stgit-0.14.3.ebuild:
  The testsuite was not fully updated to the new Git libexec dir setup. Just