@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/stgit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/stgit/ChangeLog,v 1.5 2011/03/27 23:23:25 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/stgit/ChangeLog,v 1.6 2011/08/30 07:48:40 flameeyes Exp $
+
+  30 Aug 2011; Diego E. Pettenò <flameeyes@gentoo.org> -stgit-0.15.ebuild:
+  Remove old version.
 
   27 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   stgit-0.14.3.ebuild, stgit-0.15.ebuild, stgit-0.15-r1.ebuild:
